# QuantExtBoilerplate

./: .travis.yml  CMakeLists.txt  README.md
cmake/modules/: FindBoost.cmake  FindQuantLib.cmake  FindVLD.cmake  SubFolder.cmake
docker/: Dockerfile  build_glog.sh  build_googletest.sh
lib/: CMakeLists.txt
lib/QuantExt/: CMakeLists.txt
src/: CMakeLists.txt
src/examples/: CMakeLists.txt
test/: CMakeLists.txt
tools/: make_class.py  make_module.py
tools/template/: src.cpp  test.cpp
